# ghostcard

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
include/: Card.h  Game.h  Player.h
src/: Card.cpp  Game.cpp  Player.cpp  main.cpp
